Fix image alignment by changing selector from .right to .left

--- a/main.css
+++ b/main.css
@@ -154,7 +154,7 @@ ul {
         display: block;
         height: 500px;
 }
-.right img {
+.left img {
         display: block;
 }
 
